tests/sources/invalid/known_issues/export_errors.fire
//@ skip: parser error-recovery position for this file's EOF diagnostic shifts between compiles once any //~ annotation is inserted (discovered during the v2 harness migration); needs a compiler-side recovery fix before re-enabling under the //~ annotation system
// Invalid uses of 'export'.

// export before an import
export import utils.helper

// export before a directive
export directive enable_drops;

// export of a constraint declaration
export constraint Nums = int32 | int64;

// export applied to a non-declaration statement
export println("hi");

// export at end of file with nothing after it
export
